# netrace

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.yml  codeql.yml
cmake/: musl-static.cmake
src/: config.h  main.c
src/addon/: __init__.c  __init__.h  dns.c
src/proxy/: __init__.c  __init__.h  raw.c  socks5.c
src/runtime/: __init__.c  __init__.h  chain.c  chain.h  dns.c  dns.h  proxy.c  proxy.h  raw.c  socks5.c  socks5.h
src/trace/: __init__.c  __init__.h  accept.c  accept4.c  access.c  bind.c  clone.c  close.c  close_range.c  connect.c  dup.c  dup2.c  dup3.c  execve.c  faccessat.c  fcntl.c  getcwd.c  getpeername.c  getpid.c  getsockname.c  getuid.c  ioctl.c  listen.c  openat.c  pipe2.c  pread64.c  preadv.c  preadv2.c  pwrite64.c  pwritev.c  pwritev2.c  read.c  readv.c  recvfrom.c  recvmsg.c  sendfile.c  sendmmsg.c  sendmsg.c  sendto.c  setsockopt.c  (+5 more)
src/utils/: cmdoption.c  cmdoption.h  cstr.c  cstr.h  defs.h  dns.c  dns.h  file.c  file.h  ipfilter.c  ipfilter.h  list.c  list.h  log.c  log.h  map.c  map.h  memory.c  memory.h  random.c  random.h  socket.c  socket.h  str.c  str.h  syscall.c  syscall.h  time.c  time.h  urlparser.c  urlparser.h
test/: CMakeLists.txt  main.c  runtime.c  runtime.h  trace_fork.c
test/cases/: clone_escape.c  connect.c  cstr.c  dns.c  dns_parser.c  exitcode.c  grandchild.c  pid.c  urlparser.c
test/tools/: __init__.c  __init__.h  exit.c  slice.c  slice.h
test/utils/: msg.c  msg.h  simple_server.c  simple_server.h  socket2.c  socket2.h
